--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.15.3",
     "react": "15.4.2",
     "react-native": "0.42.3",
-    "react-native-camera-roll-picker": "^1.1.9"
+    "react-native-camera-roll-picker": "^1.1.9",
+    "react-native-chooser": "^1.4.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
