--- a/ios/Psychic Paper.xcodeproj/xcshareddata/xcschemes/Psychic Paper.xcscheme
+++ b/ios/Psychic Paper.xcodeproj/xcshareddata/xcschemes/Psychic Paper.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "purple.app"
+               BuildableName = "Psychic Paper.app"
                BlueprintName = "Psychic Paper"
                ReferencedContainer = "container:Psychic Paper.xcodeproj">
             </BuildableReference>
@@ -71,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "purple.app"
+            BuildableName = "Psychic Paper.app"
             BlueprintName = "Psychic Paper"
             ReferencedContainer = "container:Psychic Paper.xcodeproj">
          </BuildableReference>
@@ -94,7 +94,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "purple.app"
+            BuildableName = "Psychic Paper.app"
             BlueprintName = "Psychic Paper"
             ReferencedContainer = "container:Psychic Paper.xcodeproj">
          </BuildableReference>
@@ -113,7 +113,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "purple.app"
+            BuildableName = "Psychic Paper.app"
             BlueprintName = "Psychic Paper"
             ReferencedContainer = "container:Psychic Paper.xcodeproj">
          </BuildableReference>
@@ -124,6 +124,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
+      customArchiveName = "Psychic Paper"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
